--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 <body>
     <header id="home">
         <nav>
-<div class="lambda-black">
-    <img src="C:\Users\rpson\desktop\Sprint-Challenge--User-Interface\img\lambda-black.png"  alt="lambda-black">
-    </div>
-    <div class="links">
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
+            <div class="lambda-black">
+                <img src="C:\Users\rpson\desktop\Sprint-Challenge--User-Interface\img\lambda-black.png"
+                    alt="lambda-black">
+            </div>
+            <div class="links">
+                <a href="home.html">Home</a>
+                <a href="about.html">About</a>
                 <a href="#products">Products</a>
                 <a href="#blog">Blog</a>
                 <a href="#contact">Contact</a>
@@ -28,8 +29,8 @@
         </nav>
     </header>
 
-        <div class="container">
-           <img src="C:\Users\rpson\desktop\Sprint-Challenge--User-Interface\img\jumbo.jpg" alt="container">
+    <div class="container">
+        <img src="C:\Users\rpson\desktop\Sprint-Challenge--User-Interface\img\jumbo.jpg" alt="container">
 
         <section class="top-content">
             <div class="text-container">
