--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <img src="C:\Users\rpson\desktop\Sprint-Challenge--User-Interface\img\lambda-black.png" alt="lambda-black">
       </div>
       <div class="links">
-        <a href="#home">Home</a>
+        <a href="home.html">Home</a>
         <a href="#about">About</a>
         <a href="#products">Products</a>
         <a href="#blog">Blog</a>
@@ -29,89 +29,97 @@
     </nav>
   </header>
 
-  <div class="container about-page">
+  <section id="about">
+    <section>
 
-    <section id="about">
-      <div class="text">
+      <div class="container">
+        <img src="C:\Users\rpson\desktop\Sprint-Challenge--User-Interface\img\jumbo-about.png" alt="container">
 
-        <h2>About</h2>
+        <div class="container about-page">
 
-        <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to
-          corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow
-          the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
-      </div>
-    </section>
-    <hr style="border: 0.5px dashed black;" />
+          <section id="about">
+            <div class="text">
 
-    <section class="Strategy-HowWeWork">
-      <div class="div1 Strategy">
-        <img src="img/about-plan.png" alt="strategy">
-        <h3>Strategy<h3>
-            <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-              proposition.</p>
-            <p>
-              <div class="button">Learn More</div>
-            </p>
-            <hr style="border: 0.5px dashed black;" />
-      </div>
+              <h2>About</h2>
 
-      <div class="div1 HowWeWork">
-        <img src="img/about-working.png" alt="strategy">
+              <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches
+                to
+                corporate strategy foster collaborative thinking to further the overall value proposition. Organically
+                grow
+                the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+            </div>
+          </section>
+          <hr style="border: 0.5px dashed black;" />
 
-        <h3>How We Work</h3>
-        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-          proposition.</p>
-        <p>
-          <div class="button">Learn More</div>
-        </p>
-        <hr style="border: 0.5px dashed black;" />
-      </div>
-    </section>
+          <section class="Strategy-HowWeWork">
+            <div class="div1 Strategy">
+              <img src="img/about-plan.png" alt="strategy">
+              <h3>Strategy<h3>
+                  <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall
+                    value
+                    proposition.</p>
+                  <p>
+                    <div class="button">Learn More</div>
+                  </p>
+            </div>
 
+            <div class="div2 HowWeWork">
+              <img src="img/about-working.png" alt="strategy">
 
-    <section class="PlacesWeWork-Collaboration">
-      <div class="div2 PlacesWeWork">
-        <img src="img/about-office.png" alt="strategy">
-        <h3>Places We Work</h3>
-        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-          proposition.
-        </p>
-        <p>
-          <div class="button">Learn More</div>
-        </p>
-        <hr style="border: 0.5px dashed black;" />
-      </div>
-
-      <div class="div2 Collaboration">
-        <img src="img/about-meeting.png" alt="strategy">
-        <h3>Collaboration</h3>
-        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-          proposition.
-        </p>
-        <p>
-          <div class="button">Learn More</div>
-        </p>
-        <hr style="border: 0.5px dashed black;" />
-      </div>
-    </section>
+              <h3>How We Work</h3>
+              <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+                proposition.</p>
+              <p>
+                <div class="button">Learn More</div>
+              </p>
+            </div>
+          </section>
 
 
-    <h2>Let's Work Together</h2>
+          <section class="PlacesWeWork-Collaboration">
+            <div class="div3 PlacesWeWork">
+              <img src="img/about-office.png" alt="strategy">
+              <h3>Places We Work</h3>
+              <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+                proposition.
+              </p>
+              <p>
+                <div class="button">Learn More</div>
+              </p>
+              <hr style="border: 0.5px dashed black;" />
+            </div>
 
-    <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to
-      corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the
-      holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+            <div class="div4 Collaboration">
+              <img src="img/about-meeting.png" alt="strategy">
+              <h3>Collaboration</h3>
+              <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+                proposition.
+              </p>
+              <p>
+                <div class="button">Learn More</div>
+              </p>
+              <hr style="border: 0.5px dashed black;" />
+            </div>
+          </section>
 
-    <footer>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="#">About</a>
-        <a href="#">Products</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
-      </nav>
-    </footer>
-  </div><!-- container -->
+
+          <h2>Let's Work Together</h2>
+
+          <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to
+            corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow
+            the
+            holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+
+          <footer>
+            <nav>
+              <a href="index.html">Home</a>
+              <a href="#">About</a>
+              <a href="#">Products</a>
+              <a href="#">Blog</a>
+              <a href="#">Contact</a>
+            </nav>
+          </footer>
+        </div><!-- container -->
 </body>
 
 </html>
