--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <img src="C:\Users\rpson\desktop\Sprint-Challenge--User-Interface\img\lambda-black.png" alt="lambda-black">
       </div>
       <div class="links">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="#about">About</a>
         <a href="#products">Products</a>
         <a href="#blog">Blog</a>
