--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     alt="lambda-black">
             </div>
             <div class="links">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="#products">Products</a>
                 <a href="#blog">Blog</a>
@@ -88,7 +88,7 @@
 
         <footer>
             <nav>
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
                 <a href="#">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
